v2 fixed background-attachment problem on iOS devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,7 +77,7 @@ header {
 		background-image: url('../img/hero-small.jpg');
 		background-position: center;
 		background-size: cover;
-		background-attachment: fixed;
+		background-attachment: scroll;
 		z-index: 0;
 	}
 
@@ -229,7 +229,7 @@ header {
 .team {
 	position: relative;
 	background-image: url('../img/team/team-room2.jpg');
-	background-attachment: fixed;
+	background-attachment: scroll;
 	background-size: cover;
 	z-index: 0;
 
@@ -378,6 +378,7 @@ header {
 	}
 	.aboutus-hero {
 		background-image: url('../img/hero2-big.jpg');
+		background-attachment: fixed;
 	}
 	.prices {
 		.price-info {
@@ -390,6 +391,7 @@ header {
 	header {
 		.hero-img {
 			background-image: url('../img/hero-big.jpg');
+			background-attachment: fixed;
 		}
 	}
 }
